# saize_solver

./: CMakeLists.txt  Dockerfile  README.md  main.cpp
include/: findSquares.hpp  homography.hpp  image.hpp
